# holy-binaric

./: CMakeLists.txt  Makefile  README.md  holy-binaric
_OLD/: README.md
_OLD/include/: wav_format.h
_OLD/src/: audio_capture.c
src/: audio_capture  audio_capture.c  audio_capture.h  audio_encode.c  main.c  main.cpp  wav_format.c
